# semiyield

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat
.github/: keepalive-last-run
.github/workflows/: ci.yml  keepalive.yml
dashboard/: app.py
semiyield/: __init__.py
semiyield/datagen/: __init__.py  fab_generator.py
semiyield/doe/: __init__.py  optimizer.py
semiyield/models/: __init__.py  ensemble.py  explainability.py
semiyield/simulation/: __init__.py  deposition.py  etching.py  implantation.py  oxidation.py
semiyield/spc/: __init__.py  control_charts.py
semiyield/spice/: __init__.py  netlist.py
tests/: test_datagen.py  test_doe.py  test_models.py  test_simulation.py  test_spc.py  test_spice.py
